--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-osx_image: xcode8.3
+osx_image: xcode9.1
 language: objective-c
 xcode_sdk: iphonesimulator10.3
 git:
@@ -7,6 +7,7 @@ cache:
 - bundler
 - cocoapods
 before_install:
+  brew update
 - export IOS_SIMULATOR_UDID=`instruments -s devices | grep "iPhone SE (10.3" | awk -F '[ ]' '{print $4}' | awk -F '[\[]' '{print $2}' | sed 's/.$//'`
 - echo $IOS_SIMULATOR_UDID
 - open -a "simulator" --args -CurrentDeviceUDID $IOS_SIMULATOR_UDID
