--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ cache:
 - bundler
 - cocoapods
 before_install:
-  brew update
+- brew update
 - export IOS_SIMULATOR_UDID=`instruments -s devices | grep "iPhone SE (10.3" | awk -F '[ ]' '{print $4}' | awk -F '[\[]' '{print $2}' | sed 's/.$//'`
 - echo $IOS_SIMULATOR_UDID
 - open -a "simulator" --args -CurrentDeviceUDID $IOS_SIMULATOR_UDID
