--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_script:
 - export LANG=en_US.UTF-8
 script:
 - gem install danger -v 2.0.1 --no-ri --no-rdoc && danger
-- set -o pipefail && travis_retry xcodebuild -workspace Ello.xcworkspace -scheme Ello -configuration
+- set -o pipefail && travis_retry xcodebuild -workspace HobbyApp.xcworkspace -scheme HobbyApp -configuration
   Debug -destination "id=$IOS_SIMULATOR_UDID" clean test | xcpretty -f `xcpretty-travis-formatter`
 notifications:
   email: false
